--- a/network.yml
+++ b/network.yml
@@ -3,6 +3,7 @@
 - import_playbook: "network.devices.yml"
 - import_playbook: "network.initramfs.yml"
 - import_playbook: "network.modules.yml"
+- import_playbook: "network.mounts.yml"
 - import_playbook: "network.options.yml"
 
 
