--- a/network.mounts.yml
+++ b/network.mounts.yml
@@ -7,22 +7,18 @@
   vars:
 
     network_mounts_packages:
-      - { name: "cifs-utils" }
-      - { name: "nfs-common" }
+      - "cifs-utils"
+      - "nfs-utils"
 
   tasks:
 
-    - name: "Setup Network Mounts: Install Packages"
-      apt:
-        name: "{{ item.name }}"
+    - name: "Setup Network Mounts: Install Helper Tools from Distribution"
+      ansible.builtin.dnf:
+        name: "{{ network_mounts_packages }}"
         state: "latest"
-        update_cache: true
-        cache_valid_time: 86400
-        default_release: "{{ item.release|default(ansible_distribution_release) }}"
-      loop: "{{ network_mounts_packages|select('distribution', distro, release, attribute='requires')|list }}"
 
     - name: "Setup Network Mounts: Install Systemd Mount Unit for Mount Points"
-      template:
+      ansible.builtin.template:
         dest: "/etc/systemd/system/{{ item.path|replace('/', '-')|regex_replace('^-') }}.mount"
         src: "{{ playbook_dir }}/files/etc/systemd/system/network.mounts.mount.j2"
         owner: "root"
@@ -43,7 +39,7 @@
         label: "{{ item.path }}"
 
     - name: "Setup Network Mounts: Install Systemd Automount Unit for Mount Points"
-      template:
+      ansible.builtin.template:
         dest: "/etc/systemd/system/{{ item.path|replace('/', '-')|regex_replace('^-') }}.automount"
         src: "{{ playbook_dir }}/files/etc/systemd/system/network.mounts.automount.j2"
         owner: "root"
@@ -59,6 +55,17 @@
         force_unmount: "{{ item.force_unmount|default(false) }}"
         mount_timeout: "{{ item.mount_timeout|default(30) }}"
         idle_timeout: "{{ item.idle_timeout|default(0) }}"
+      when: "item.onboot|default(true)"
+      loop: "{{ network_mounts|default([]) }}"
+      loop_control:
+        label: "{{ item.path }}"
+
+    - name: "Setup Network Mounts: Enable Systemd Automount Unit for Mount Points"
+      ansible.builtin.systemd_service:
+        name: "{{ item.path|replace('/', '-')|regex_replace('^-') }}.automount"
+        state: "started"
+        enabled: true
+        daemon_reload: true
       when: "item.onboot|default(true)"
       loop: "{{ network_mounts|default([]) }}"
       loop_control:
