--- a/software.yml
+++ b/software.yml
@@ -1,22 +1,19 @@
 
 
-- import_playbook: "install.android_studio.yml"
 - import_playbook: "install.arduino.yml"
-- import_playbook: "install.baidunetdisk.yml"
-- import_playbook: "install.conky.yml"
+- import_playbook: "install.chrome.yml"
+- import_playbook: "install.chromium.yml"
 - import_playbook: "install.console.yml"
 - import_playbook: "install.desktop.yml"
-- import_playbook: "install.emscripten.yml"
 - import_playbook: "install.firefox.yml"
 - import_playbook: "install.golang.yml"
 - import_playbook: "install.java.yml"
-- import_playbook: "install.netbeans.yml"
 - import_playbook: "install.node.yml"
+- import_playbook: "install.packaging.yml"
 - import_playbook: "install.php.yml"
 - import_playbook: "install.python.yml"
-- import_playbook: "install.sass.yml"
 - import_playbook: "install.skype.yml"
-- import_playbook: "install.system.yml"
+- import_playbook: "install.steam.yml"
 - import_playbook: "install.wine.yml"
 - import_playbook: "install.zoom.yml"
 
