Update the Hardware Setup Playbooks
The hardware setup playbooks are updated to make them suitable
for Fedora. The commit includes Fedora specific updates and some
cleanup.

--- a/hardware.blockdev.yml
+++ b/hardware.blockdev.yml
@@ -6,24 +6,14 @@
 
   tasks:
 
-    - name: "Configuring Block Devices: Install Udev Rules"
-      template:
-        dest: "/etc/udev/rules.d/99-blockdev.rules"
-        src: "{{ playbook_dir }}/files/etc/udev/rules.d/99-blockdev.rules.j2"
-        owner: "root"
-        group: "root"
-        mode: "0600"
-      when: "hardware_blockdev_names|default([])|length > 0"
-      notify:
-        - "Reload Udev Service"
-        - "Apply Udev Configuration"
-
-  handlers:
-
-    - name: "Reload Udev Service"
-      command: "udevadm control --reload"
-
-    - name: "Apply Udev Configuration"
-      command: "udevadm trigger"
+    - name: "Configure Block Devices: Install Tools from Distribution"
+      ansible.builtin.dnf:
+        name:
+          - "exfatprogs"
+          - "ntfs-3g"
+          - "ntfsprogs"
+          - "nvme-cli"
+          - "smartmontools"
+        state: "latest"
 
 
