--- a/hardware.vfio.yml
+++ b/hardware.vfio.yml
@@ -6,122 +6,31 @@
 
   tasks:
 
-    - name: "Configuring Virtual Function IO: Create User Group"
-      group:
-        name: "vfio"
-        state: "present"
-        system: "yes"
-
-    - name: "Configuring Virtual Function IO: Install Udev Rules"
-      copy:
-        dest: "/etc/udev/rules.d/99-vfio.rules"
-        src: "{{ playbook_dir }}/files/etc/udev/rules.d/99-vfio.rules"
-        owner: "root"
-        group: "root"
-        mode: "0644"
-      notify:
-        - "Reload Udev Service"
-        - "Apply Udev Configuration"
-
-    - name: "Configuring Virtual Function IO: Enable Kernel Modules"
-      copy:
+    - name: "Configure Virtual Function IO: Enable Kernel Modules at Boot"
+      ansible.builtin.copy:
         dest: "/etc/modules-load.d/vfio.conf"
         src: "{{ playbook_dir }}/files/etc/modules-load.d/vfio.conf"
         owner: "root"
         group: "root"
         mode: "0644"
 
-    - name: "Configuring Virtual Function IO: Update Initial RAM Disk"
-      lineinfile:
-        dest: "/etc/initramfs-tools/modules"
-        regexp: '^\s*#?\s*vfio_pci.*$'
-        line: 'vfio_pci'
-      notify:
-        - "Update Initial RAM Disk"
+    - name: "Configure Virtual Function IO: Enable IOMMU Support in Kernel Command Line"
+      ansible.builtin.shell:
+        cmd: "grubby --update-kernel=ALL --args=iommu=pt"
 
-    - name: "Configuring Virtual Function IO: Initialize Kernel Command Line"
-      lineinfile:
-        dest: "/etc/default/grub"
-        regexp: '^\s*#\s*GRUB_CMDLINE_LINUX_DEFAULT=(?:"?\s*(.*?)\s*"?)?\s*$'
-        line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1"'
-        backrefs: "yes"
-      notify:
-        - "Update GRUB Boot Loader"
+    - name: "Configure Virtual Function IO: Enable Intel IOMMU Support in Kernel Command Line"
+      ansible.builtin.shell:
+        cmd: "grubby --update-kernel=ALL --args=intel_iommu=on"
+      when: "'GenuineIntel' in ansible_processor"
 
-    - name: "Configuring Virtual Function IO: Configure IOMMU Support in Kernel Command Line"
-      kernel_options_in_file:
-        dest: "/etc/default/grub"
-        region: '^GRUB_CMDLINE_LINUX_DEFAULT="(.*)"$'
-        state: 'present'
-        target: 'option'
-        option: 'iommu'
-        value: 'pt'
-      notify:
-        - "Update GRUB Boot Loader"
+    - name: "Configure Virtual Function IO: Enable AMD IOMMU Support in Kernel Command Line"
+      ansible.builtin.shell:
+        cmd: "grubby --update-kernel=ALL --args=amd_iommu=on"
+      when: "'AuthenticAMD' in ansible_processor"
 
-    - name: "Configuring Virtual Function IO: Configure Intel IOMMU Support in Kernel Command Line"
-      kernel_options_in_file:
-        dest: "/etc/default/grub"
-        region: '^GRUB_CMDLINE_LINUX_DEFAULT="(.*)"$'
-        state: '{{ "present" if "GenuineIntel" in ansible_processor else "absent" }}'
-        target: 'option'
-        option: 'intel_iommu'
-        value: 'on'
-      notify:
-        - "Update GRUB Boot Loader"
-
-    - name: "Configuring Virtual Function IO: Configure AMD IOMMU Support in Kernel Command Line"
-      kernel_options_in_file:
-        dest: "/etc/default/grub"
-        region: '^GRUB_CMDLINE_LINUX_DEFAULT="(.*)"$'
-        state: '{{ "present" if "AuthenticAMD" in ansible_processor else "absent" }}'
-        target: 'option'
-        option: 'amd_iommu'
-        value: 'on'
-      notify:
-        - "Update GRUB Boot Loader"
-
-    - name: "Configuring Virtual Function IO: Configure ACS Override in Kernel Command Line"
-      kernel_options_in_file:
-        dest: "/etc/default/grub"
-        region: '^GRUB_CMDLINE_LINUX_DEFAULT="(.*)"$'
-        state: '{{ "present" if hardware_vfio_acs_override|default("") != "" else "absent" }}'
-        target: 'option'
-        option: 'pcie_acs_override'
-        value: '{{ hardware_vfio_acs_override|default("") }}'
-      notify:
-        - "Update GRUB Boot Loader"
-
-    - name: "Configuring Virtual Function IO: Generate Bind Script for Each Device"
-      template:
-        dest: "/usr/local/sbin/vfio-bind-{{ item.key }}"
-        src: "{{ playbook_dir }}/files/usr/local/sbin/vfio-bind-device.j2"
-        owner: "root"
-        group: "root"
-        mode: "0755"
-      loop: "{{ hardware_vfio_devices|dict2items }}"
-
-    - name: "Configuring Virtual Function IO: Generate Unbind Script for Each Device"
-      template:
-        dest: "/usr/local/sbin/vfio-unbind-{{ item.key }}"
-        src: "{{ playbook_dir }}/files/usr/local/sbin/vfio-unbind-device.j2"
-        owner: "root"
-        group: "root"
-        mode: "0755"
-      loop: "{{ hardware_vfio_devices|dict2items }}"
-
-  handlers:
-
-    - name: "Update Initial RAM Disk"
-      command: "update-initramfs -u -k all"
-
-    - name: "Update GRUB Boot Loader"
-      command: "update-grub"
-
-    - name: "Reload Udev Service"
-      command: "udevadm control --reload"
-
-    - name: "Apply Udev Configuration"
-      command: "udevadm trigger"
+    - name: "Configure Virtual Function IO: Enable ACS Override in Kernel Command Line"
+      ansible.builtin.shell:
+        cmd: "grubby --update-kernel=ALL --args=pcie_acs_override={{ hardware_vfio_acs_override }}"
+      when: "hardware_vfio_acs_override|default('') != ''"
 
 
