Extra Packages For Fcitx
For some reason even Fedora KDE spin does not include packages that
integrates imsettings (the distribution specific framework that
manages input methods) with plasma. It causes fcitx to not work
despite being enabled by imsettings.

The commit adds these packages to the install list and fixes the
problem.

--- a/software.fcitx.yml
+++ b/software.fcitx.yml
@@ -31,6 +31,9 @@
       - "fcitx5-zhuyin"
       - "fcitx5-zhuyin-data"
       - "kcm-fcitx5"
+      - "imsettings"
+      - "imsettings-qt"
+      - "imsettings-plasma"
 
   tasks:
 
