--- a/system.yml
+++ b/system.yml
@@ -6,5 +6,6 @@
 - import_playbook: "system.network_manager.yml"
 - import_playbook: "system.ramdrive.yml"
 - import_playbook: "system.rpmfusion.yml"
+- import_playbook: "system.sddm.yml"
 
 
