--- a/hardware.video.yml
+++ b/hardware.video.yml
@@ -1,6 +1,6 @@
 
 
-- import_playbook: "system.rpmfusion.yml"
+#- import_playbook: "system.rpmfusion.yml"
 
 
 - hosts: "all"
@@ -47,8 +47,8 @@
         - { path: "/etc/udev/rules.d" }
         - { path: "/etc/X11" }
         - { path: "/etc/X11/xorg.conf.d" }
-        - { path: "/opt/prime-run/" }
-        - { path: "/opt/prime-run/bin" }
+        - { path: "/opt/video" }
+        - { path: "/opt/video/bin" }
 
     - name: "Configuring Video Cards: Install Configuration Files"
       ansible.builtin.template:
@@ -62,6 +62,8 @@
         - { path: "/etc/profile.d/video.sh" }
         - { path: "/etc/udev/rules.d/99-video.rules" }
         - { path: "/etc/X11/xorg.conf.d/10-devices.conf" }
-        - { path: "/opt/prime-run/bin/prime-run", mode: "0755" }
+        - { path: "/opt/video/bin/disable-offload", mode: "0755" }
+        - { path: "/opt/video/bin/enable-offload", mode: "0755" }
+        - { path: "/opt/video/bin/prime-run", mode: "0755" }
 
 
