--- a/software.steam.yml
+++ b/software.steam.yml
@@ -15,4 +15,9 @@
             name: "https://dl.flathub.org/repo/appstream/com.valvesoftware.Steam.flatpakref"
             state: "present"
 
+        - name: "Setup Steam: Install Protontricks from Flatpak"
+          community.general.flatpak:
+            name: "https://dl.flathub.org/repo/appstream/com.github.Matoking.protontricks.flatpakref"
+            state: "present"
+
 
