--- a/software.steam.yml
+++ b/software.steam.yml
@@ -10,6 +10,17 @@
       when: "software_steam_enabled|default(false)"
       block:
 
+        - name: "Setup Steam: Create Application Specific Directories for Home Directory Template"
+          ansible.builtin.file:
+            path: "/etc/skel/{{ item }}"
+            state: "directory"
+            owner: "root"
+            group: "root"
+            mode: "0755"
+          loop:
+            - "Music/Steam"
+            - "Pictures/Steam"
+
         - name: "Setup Steam: Install Steam from Flatpak"
           community.general.flatpak:
             name: "https://dl.flathub.org/repo/appstream/com.valvesoftware.Steam.flatpakref"
@@ -23,5 +34,9 @@
         - name: "Setup Steam: Enable Access to Offload Scripts"
           ansible.builtin.shell:
             cmd: "flatpak override --filesystem /opt/video:ro com.valvesoftware.Steam"
+
+        - name: "Setup Steam: Enable Access to Application Specific Directories under Home"
+          ansible.builtin.shell:
+            cmd: "flatpak override --nofilesystem xdg-pictures --nofilesystem xdg-music --filesystem xdg-pictures/Steam --filesystem xdg-music/Steam com.valvesoftware.Steam"
 
 
